--- a/Fronted/ChromeExtension/CombinedTwitter/ext-inject/repfeed.html
+++ b/Fronted/ChromeExtension/CombinedTwitter/ext-inject/repfeed.html
@@ -1,112 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./bootstrap.min.css" >
+    <link rel="stylesheet" href="./tab.css" >
+    <link rel="stylesheet" href="./inter.css" >
+
     <style>
       .slider {-webkit-appearance: none;
-    width: 100%;
-    height: 15px;
-    border-radius: 5px;  
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;}
-    .range-wrap {
-  position: absolute;
-  margin-top: 35px;
-}
-
-body{
-  min-height: 100vh;
-  padding: 0 10vh;
-  margin: 0;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.range-wrap{
-  width: 100%;
-  position: absolute;
-}
-.range-value{
-  position: absolute;
-  top: -140%;
-}
-.range-value span{
-  width: 30px;
-  height: 24px;
-  line-height: 24px;
-  text-align: center;
-  background: #00ace6;
-  color: #fff;
-  font-size: 12px;
-  display: block;
-  position: absolute;
-  /* left: 50%; */
-  transform: translate(-50%, 0);
-  border-radius: 6px;
-  margin-top: 0%;
-}
-.range-value span:before{
-  content: "0";
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 10px solid #00ace6;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  margin-top: -1px;
-}
+      width: 98%;
+      height: 15px;
+      border-radius: 15px;  
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      margin-left: 10px;
+      margin-right: 14px;
+      -webkit-transition: .2s;
+      transition: opacity .2s;}
+      .range-wrap {
+        position: absolute;
+        margin-top: 35px;
+      }
+      .range-wrap{
+        width: 98%;
+        position: absolute;
+      }
+      .range-value{
+        position: absolute;
+        top: -140%;
+      }
+      .range-value span{
+        width: 30px;
+        height: 24px;
+        line-height: 24px;
+        text-align: center;
+        background: #00ace6;
+        color: #fff;
+        font-size: 12px;
+        display: block;
+        position: absolute;
+        transform: translate(-50%, 0);
+        border-radius: 6px;
+        margin-top: 0%;
+        left: 3px;
+      }
+      .range-value span:before{
+        content: "0";
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-top: 10px solid #00ace6;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        top: 100%;
+        left: 50%;
+        margin-left: -4px;
+        margin-top: -1px;
+      }
     </style>
   </head>
-    <body>
-        <div id="page" class="md:w-full h-full" >
-            <div  style="position: -webkit-sticky;position: sticky;top:0;background-color:white;">
-              <!-- Repfeed title -->
-              <div
-                class="px-5 py-3 border-b border-lighter flex items-center justify-between"
-              >
-                <h1 class="text-xl font-bold">RepFeed</h1>
-                <i class="fas fa-balance-scale text-xl text-blue"></i>
-              </div>
-              <!-- slide bar -->
-              <div class="range-wrap">
-                <div class="range-value" id="rangeV"></div>
-                <input id="slide" name="slider" type="range" min="-1" max="1" step="0.1" value="0" class="slider" >
-              </div>
-              <!-- reset button -->
-              <div
-                class="px-5 py-10 border-b border-lighter flex items-center justify-between"
-              >
-                <button
-                  id="res_slide"
-                  submit
-                  class="h-10 px-4 text-white font-semibold bg-blue hover:bg-darkblue focus:outline-none rounded-full relative right-0"
-                  style="position: relative; left: 80%; top: 30px"
-                >
-                  Reset
-                </button>
-              </div>
+    <body style="background-color: white;">
+      <div id="page" class="md:w-full h-full" >
+          <div  style="position: -webkit-sticky;position: sticky;top:0;background-color:white;">
+            <!-- Repfeed title -->
+            <div class="px-5 py-3 border-b border-lighter flex items-center justify-between">
+              <h1 class="text-xl font-bold">RepFeed</h1>
+              <i class="fas fa-balance-scale text-xl text-blue"></i>
             </div>
-            <!-- feed tweet -->
-            <!-- <div id="error_div">
-              <p id="txt" class="px-5 py-6 border-b border-lighter" style="margin-top: 15px">
-              </p>
-            </div> -->
-            <!-- <div id="spinner">
-              <div class="text-center" style="margin-top: 50px">
-                <div
-                  class="spinner-border text-primary"
-                  style="width: 80px; height: 80px"
-                  role="status"
-                ></div>
-              </div>
-            </div> -->
-              <div id="feed"></div>
+
+            <!-- slide bar -->
+            <div class="range-wrap">
+              <div class="range-value" id="rangeV"></div>
+              <input id="slide" name="slider" type="range" min="-1" max="1" step="0.1" value="0" class="slider">
+            </div>
+
+            <!-- reset button -->
+            <div class="px-5 py-10 border-b border-lighter flex items-center justify-between">
+              <button
+                id="res_slide"
+                submit
+                class="h-10 px-4 text-white font-semibold bg-blue hover:bg-darkblue focus:outline-none rounded-full relative right-0"
+                style="position: relative; left: 80%; top: 30px"
+              >
+                Reset
+              </button>
+            </div>
           </div>
+          
+          <!-- this is where the tweets are displayed -->
+          <div id="feed" style="margin-left: 14px;"></div>
+        </div>
+        <script src="repfeed.js"></script>  
     </body>
 </html>
